syntax = "proto3";

option csharp_namespace = "UserStorageService";

service GrpcUserService{
    rpc UserExists (UserRequest) returns (UserResponse);
    rpc CheckingUserByNickname (ShopRequest) returns (ShopResponse);
    
    //rpc Cheking User Return Email
    //rpc Cheking User Return Id
}

message UserRequest{
    string Id = 1;
}

message UserResponse{
    string result = 1;
}

message ShopRequest{
    string Nickname = 1;
}

message ShopResponse{
    string Result = 1;
}